Update mobile-deployment.md